# eecs300-demo

./: CMakeLists.txt  README.md  console.cpp  console.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
esp_client/: WirelessCommunication.cpp  esp_client.ino
esp_server/: esp_server.ino
gui/: CMakeLists.txt  console.h  mainwindow.cpp  settingsdialog.cpp
